Changes for Labyrinth-Plugin-Survey
===================================

        - list of courses/talks should not be based on room allocation.
        - added filters to only send feedback for specific talk types.
        - use actuserid to find user before name.

0.05	2014-09-13
        - reworked survey sorting.
        - switch dates to W3CDTF standard.
        - CSS fixes.
        - added Javascript admin code.

0.04	2014-09-05
        - added vhost files for base survey site.
        - fixed license fields in META.json to be lists.

0.03	2014-08-16
        - added SQL schema files.

0.02	2014-08-16
        - added YAPC Survey file specificaions.

0.01	2014-08-16
        - first official release.
        - base code and distribution files.