@@ -1,6 +1,6 @@
 [% FOREACH section = survey.sections %]
 <div class="section">
-<h2>[% section.label %]</h2>
+<h4>[% section.label %]</h4>
 
 <div class="newsbox">
 
