@@ -2,7 +2,7 @@
 
 [% IF data.submitted %]
 
-<div class="newsbox">
+<div class="newsbox intro">
 
 <p>You have already completed your survey. As the survey results are recorded
 anonymously, we are unable to retrieve your original survey, and thus are
@@ -18,7 +18,7 @@ Best regards,<br />
 
 [% ELSIF data.thanks == 1 %]
 
-<div class="newsbox">
+<div class="newsbox intro">
 
 <p>Many thanks for completing this survey.</p>
 
@@ -26,7 +26,7 @@ Best regards,<br />
 the usual Perl news outlets or the <a href="http://yapc-surveys.org">YAPC 
 Conference Surveys</a> website.</p>
 
-<p>Return to the <a href="/">survey index</a>.</p>
+<p>You will be redirected in a few seconds. If this does not happen, please <a href="/?thanks=2">click here</a> to return to the <a href="/">survey index</a>.</p>
 
 <p>
 Best regards,<br />
@@ -36,7 +36,7 @@ Best regards,<br />
 
 [% ELSIF data.thanks == 2 %]
 
-<div class="newsbox">
+<div class="newsbox intro">
 
 <p>It appears you submitted a blank assessment form. Please click back in your browser
 and enter a completed form, or <a href="/">return to the survey index</a> to 
@@ -52,8 +52,8 @@ Best regards,<br />
 [% ELSE %]
 
 [% IF NOT errmess %]
-<div class="newsbox">
-<h2>Dear Attendee,</h2>
+<div class="newsbox intro">
+<h3>Dear Attendee,</h3>
 <p>We would like to invite you to complete the following survey as best you 
 can. Our aim is to allow us and future organisers to understand who attends 
 these events, and also to see what we can do to improve the whole conference
